k8s/k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: dridas
spec:
  selector:
    app: dridas
  ports:
    - port: 80
      targetPort: 5000
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dridas-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
    - hosts:
        - dridas.no
        - www.dridas.no
      secretName: dridas-prod-cert
  rules:
    - host: www.dridas.no
      http:
        paths:
          - backend:
              serviceName: dridas
              servicePort: 80
    - host: dridas.no
      http:
        paths:
          - backend:
              serviceName: dridas
              servicePort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dridas-deployment
  labels:
    app: dridas
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 1
  selector:
    matchLabels:
      app: dridas
  template:
    metadata:
      labels:
        app: dridas
    spec:
      containers:
        - name: dridas
          image: hovedbore/dridas:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /
              port: 5000
            periodSeconds: 30
            timeoutSeconds: 1
            initialDelaySeconds: 10
          ports:
            - containerPort: 5000
